fix deleted topics so they meta info becomes visible when they are restored

--- a/scss/modules/topics-list.scss
+++ b/scss/modules/topics-list.scss
@@ -5,6 +5,7 @@
 [component="category/topic"] {
 	&.deleted {
 		opacity: 0.6;
+		.meta { display: none!important; }
 	}
 
 	&.selected {
